# verify-rust-std

./: .gitignore  .gitmodules  README.md  library.patch  rust-toolchain.toml  stdarch.patch
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_requests.toml
.github/ISSUE_TEMPLATE/: tool_application.md  tracking_issue.md
.github/workflows/: book.yml  flux.yml  goto-transcoder.yml  kani-metrics.yml  kani.yml  pr_approval.yml  rustc.yml  update-subtree.yml  verifast-negative.yml  verifast.yml
.reuse/: dep5
contracts/safety/: build.rs
doc/: book.toml
doc/mdbook-metrics/: Cargo.toml
doc/mdbook-metrics/src/: main.rs
doc/src/: SUMMARY.md  challenge_template.md  challenges.md  general-rules.md  intrinsics-memory.md  intro.md  template.md  todo.md  tool_template.md  tools.md
doc/src/challenges/: 0001-core-transmutation.md  0002-intrinsics-memory.md  0003-pointer-arithmentic.md  (+24 more)
scripts/: check_kani.sh  check_rustc.sh  find-contracts.sh  pull_from_upstream.sh  run-goto-transcoder.sh  run-kani.sh  run_update_with_checks.sh  update_toolchain_date.sh
scripts/autoharness_analyzer/: Cargo.toml  README.md
scripts/autoharness_analyzer/src/: main.rs  make_tables.rs  parse_scanner_output.rs
scripts/kani-std-analysis/: kani_std_analysis.py  log_parser.py  metrics-data-core.json  metrics-data-std.json  metrics-data.json  std-analysis.sh
tool_config/: kani-version.toml
verifast-proofs/: .gitignore  README.md  check-verifast-proofs-negative.mysh  check-verifast-proofs-negative.sh  check-verifast-proofs.mysh  check-verifast-proofs.sh  patch-verifast-proofs.sh
(+8 files in other folders)
